use xslt for displaying search results

--- a/textgrid/templates/bootstrap3/results.html
+++ b/textgrid/templates/bootstrap3/results.html
@@ -37,9 +37,7 @@
                     </form>
                     <div data-template="templates:each" data-template-from="hits" data-template-to="hit" class="row">
                         <div class="col-md-10">
-                            <strong>
-                                <a href="#" data-template="fsearch:result-title">title</a>
-                            </strong>
+							<div data-template="fsearch:result-xslt"/>
                             <p data-template="fsearch:result-kwic">KWIC matches</p>
                             <a href="#" data-template="fsearch:result-source">Source</a>
                             <hr/>
