--- a/textgrid/templates/bootstrap3/info.html
+++ b/textgrid/templates/bootstrap3/info.html
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <div data-template="templates:init">
     <div data-template="templates:surround" data-template-with="page_index.html" data-template-at="content-container">
         <h2>Hier eine Liste der enthaltenen Dokumentation</h2>
@@ -12,6 +11,12 @@
                 </ul>
             </li>
         </ul>
+        <form action="deleteall.html" method="GET">
+            <input type="hidden" value="1" name="check"/>
+            <button type="submit" class="btn btn-danger">
+                <b>Delete all TextGrid data within this instance</b>
+            </button>
+        </form>
         <h2>Hier die Config:</h2>
         <div class="config:app-info"/>
     </div>
