--- a/textgrid/templates/tmpl1/sign-up.html
+++ b/textgrid/templates/tmpl1/sign-up.html
@@ -20,7 +20,7 @@
                     <div class="col-md-6 col-md-offset-3 signup">
                         <h3 class="hl top-zero">Registration</h3>
                         <hr/>
-                        <form role="form" action="00test.html" method="post">
+                        <form role="form" action="register.html" method="post">
                             <div class="form-group">
                                 <input type="text" class="form-control" id="projectname" placeholder="Projektname" data-toggle="popover" data-placement="left" data-trigger="focus" data-content="Erlaubt sind nur lateinische Buchstaben und Zahlen sowie &#34;-&#34; und &#34;_&#34;. Leerzeichen werden automatisch durch &#34;_&#34; ersetzt." data-original-title="Projektname" name="project-name"/>
                             </div>
