--- a/textgrid/templates/tmpl1/page_index.html
+++ b/textgrid/templates/tmpl1/page_index.html
@@ -19,6 +19,15 @@
         <link href="fonts/font-awesome-4.0.3/css/font-awesome.min.css" rel="stylesheet"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"/>
 
+    <!-- SemToNotes CSS and JS -->
+        <link rel="stylesheet" type="text/css" href="TESTresources/css/bayhsta.css"/>
+        <link rel="stylesheet" type="text/css" href="semtonotes/css/dsk.css"/>
+        <script src="semtonotes/lib/DigitaleSchriftkunde.js"/>
+        <script type="text/javascript">
+            goog.require('dsk');
+        </script>
+
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
