add modules js/css loading to tmpl1

--- a/textgrid/templates/tmpl1/page_index.html
+++ b/textgrid/templates/tmpl1/page_index.html
@@ -27,6 +27,9 @@
             goog.require('dsk');
         </script>
 
+    <!-- include scripts and styles from SADE modules -->    
+        <link class="config:html-head"/>
+
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
