font and font size changed

--- a/textgrid/templates/tmpl1/css/custom.css
+++ b/textgrid/templates/tmpl1/css/custom.css
@@ -1529,3 +1529,8 @@ div#nav-textgrid ul.nav li {
     z-index:1000000;
     background-color: gray;
     opacity:0.6;}
+
+.teiXsltView {
+    font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;
+    font-size: 1.4em;
+}
