--- a/textgrid/templates/tmpl1/content.html
+++ b/textgrid/templates/tmpl1/content.html
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <div data-template="templates:init">
     <div data-template="templates:surround" data-template-with="page_index.html" data-template-at="content-container">
-        <div data-template="mviewer:show" data-template-id="index.md"/>
+       <div class="container">
+            <div data-template="mviewer:show" data-template-id="index.md"/>
+        </div>
     </div>
 </div>
