--- a/textgrid/templates/tmpl1/register.html
+++ b/textgrid/templates/tmpl1/register.html
@@ -1,9 +1,7 @@
 <!--
-to be placed in /[PROJECTS]/[PROJECT-NAME]/templates/tmpl1/ 
+to be placed in /[PROJECTS]/[PROJECT-NAME]/templates/tmpl1/
 requires: module and sign-up.html
 -->
-<div data-template="templates:init">
-    <div data-template="templates:surround" data-template-with="page_index.html" data-template-at="content-container">
+    <div data-template="templates:surround" data-template-with="/../../sade-projects/textgrid/templates/tmpl1/page_index.html" data-template-at="content-container">
         <div data-template="usr:new"/>
     </div>
-</div>
