--- a/textgrid/templates/tmpl1/results.html
+++ b/textgrid/templates/tmpl1/results.html
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<div data-template="templates:init">
-    <div data-template="templates:surround" data-template-with="page_index.html" data-template-at="content-container">
+    <div data-template="templates:surround" data-template-with="/../../sade-projects/textgrid/templates/tmpl1/page_index.html" data-template-at="content-container">
         <!--        <div data-template="search:debug"/>-->
         <div class="row" data-template="fsearch:results">
 <!--            <div id="facetback"></div>-->
@@ -12,9 +11,9 @@
                     <span id="page" class="hidden" data-template="fsearch:page"/>
                     <span id="pages" class="hidden" data-template="fsearch:pages"/>
                     <div>
-                        <ul class="paginator pull-right"/> 
-                        Zeige Treffer <span id="hitstart" data-template="fsearch:hitstart"/> - 
-                        <span id="hitend" data-template="fsearch:hitend"/> von 
+                        <ul class="paginator pull-right"/>
+                        Zeige Treffer <span id="hitstart" data-template="fsearch:hitstart"/> -
+                        <span id="hitend" data-template="fsearch:hitend"/> von
                         <span id="hitcount" data-template="fsearch:hitcount"/> Treffern
                     </div>
                     <form class="form-horizontal" role="form">
@@ -47,9 +46,9 @@
                         </div>
                     </div>
                     <div>
-                        <ul class="paginator pull-right"/> 
-                        Zeige Treffer <span id="hitstart" data-template="fsearch:hitstart"/> - 
-                        <span id="hitend" data-template="fsearch:hitend"/> von 
+                        <ul class="paginator pull-right"/>
+                        Zeige Treffer <span id="hitstart" data-template="fsearch:hitstart"/> -
+                        <span id="hitend" data-template="fsearch:hitend"/> von
                         <span id="hitcount" data-template="fsearch:hitcount"/> Treffern
                     </div>
                 </div>
@@ -57,7 +56,7 @@
         </div>
         <script>
           $(function() {
-              
+
             // http://www.samaxes.com/2011/09/change-url-parameters-with-jquery/
             /*
              * queryParameters -&gt; handles the query string parameters
@@ -67,53 +66,52 @@
              */
             var queryParameters = {}, queryString = location.search.substring(1),
                 re = /([^&amp;=]+)=([^&amp;]*)/g, m;
-             
+
             // Creates a map with the query string parameters
             while (m = re.exec(queryString)) {
                 // queryParameters[decodeURIComponent(m[1])] = decodeURIComponent(m[2]);
                 queryParameters[m[1]] = m[2];
-            }  
-              
+            }
+
             $('.paginator').bootstrapPaginator({
                 bootstrapMajorVersion: 3,
                 currentPage: $('#page').text(),
                 totalPages: $('#pages').text(),
                 pageUrl: function(type, page, current){
-                    
+
                     queryParameters['page'] = page;
-                    
+
                     var querystring = "";
                     $.each(queryParameters, function(key, val) {
                         querystring += key + "=" + val + "&amp;";
                     })
                     querystring = querystring.substring(0, querystring.length-1)
-                    
+
                     return window.location.pathname + '?' + querystring;
                 }
 		    })
-		    
+
 		    //$('.paginator').bootstrapPaginator("show", 10);
-		    
+
 		    $('.facet-minus').each(function() {
 		        $(this).html($('&lt;span class="glyphicon glyphicon-minus-sign" /&gt;'));
 		    });
-		    
+
 		    $('.facet-plus').each(function() {
 		        $(this).html($('&lt;span class="glyphicon glyphicon-plus-sign" /&gt;'));
 		    });
-		    
+
 		  //  $('.facetSelected').each(function(elem) {
-		        
-		       
-		       
+
+
+
 		  //     var link = $('&lt;a href="#"&gt;x&lt;/a&gt;');
-		       
+
 		  //    // $(this).html($('&lt;span&gt;'+$(this).text()+' &lt;/span&gt;' + link));
 		  //     $(this).append(link);
 		  //     console.log($(this).attr('key') + ":" + $(this).text());
 		  //  });
-            
+
           });
         </script>
     </div>
-</div>
