--- a/textgrid/templates/tmpl1/team.html
+++ b/textgrid/templates/tmpl1/team.html
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<div data-template="templates:init">
-    <div data-template="templates:surround" data-template-with="page_index.html" data-template-at="content-container">
+    <div data-template="templates:surround" data-template-with="/../../sade-projects/textgrid/templates/tmpl1/page_index.html" data-template-at="content-container">
 
-    
+
 <!-- Main body
 ================== -->
         <div class="wrapper">
@@ -63,4 +62,3 @@
             </div>
         </div>
     </div>
-</div>
