--- a/textgrid/templates/tmpl1/deleteall.html
+++ b/textgrid/templates/tmpl1/deleteall.html
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<div data-template="templates:init">
-    <div data-template="templates:surround" data-template-with="page_index.html" data-template-at="content-container">
+    <div data-template="templates:surround" data-template-with="/../../sade-projects/textgrid/templates/tmpl1/page_index.html" data-template-at="content-container">
         <div data-template="app:eraseall"/>
     </div>
-</div>
