--- a/textgrid/templates/tmpl1/info.html
+++ b/textgrid/templates/tmpl1/info.html
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<div data-template="templates:init">
-    <div data-template="templates:surround" data-template-with="page_index.html" data-template-at="content-container">
+    <div data-template="templates:surround" data-template-with="/../../sade-projects/textgrid/templates/tmpl1/page_index.html" data-template-at="content-container">
         <h2>Hier eine Liste der enthaltenen Dokumentation</h2>
         <ul data-template="nav:navitems">
             <li data-template="templates:each" data-template-from="navitems" data-template-to="item">
@@ -21,4 +20,3 @@
         <h2>Hier die Config:</h2>
         <div class="config:app-info"/>
     </div>
-</div>
