--- a/textgrid/templates/tmpl1/mirador.html
+++ b/textgrid/templates/tmpl1/mirador.html
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<div data-template="templates:init">
-    <div data-template="templates:surround" data-template-with="page_index.html" data-template-at="content-container">
+    <div data-template="templates:surround" data-template-with="/../../sade-projects/textgrid/templates/tmpl1/page_index.html" data-template-at="content-container">
         <div id="mirador" style="width:100%; height:900px; margin-top: 50px">
-            <iframe src="http://textgridlab.org/1.0/iiif/mirador/view.html?uri=textgrid:2270n.0" height="100%" width="100%"/>
+            <iframe src="https://textgridlab.org/1.0/iiif/mirador/?uri=textgrid:2smv7.0" height="100%" width="100%"/>
         </div>
     </div>
-</div>
